# projeto_graduacao

dado_sintetico_resultados/: plot_utils.py  synthetic_images_results.ipynb  utils.py
images/: debug_1.tif  debug_directions.tif  debug_rectangle.tif  debug_synthetic_1.tif  debug_synthetic_2.tif  debug_synthetic_3.tif  fig13  fig15_binary.tif  fractures_binary.tif  fratura_sintetica.tif  synth_1.tif  synth_2.tif  tau_63_12k_16k.tif  tau_63_16k_20k.tif  tau_63_24k_28k.tif  tau_63_28k_32k.tif  tau_63_56k_64k.tif
project/: Adjacency.h  CMakeLists.txt  PathOpen.cpp  PathOpen.h  Utils.h  dump.h  main.cpp  path_queue.cpp  path_queue.h  path_support.c  path_support.h
project/Operators/: BaseOperator.cpp  BaseOperator.h  DiagonalLeftOperator.cpp  DiagonalLeftOperator.h  DiagonalRightOperator.cpp  DiagonalRightOperator.h  FractureOperator.cpp  FractureOperator.h  FractureRightOperator.cpp  FractureRightOperator.h  HorizontalOperator.cpp  HorizontalOperator.h  VerticalOperator.cpp  VerticalOperator.h
results/: opening_transform.tif  opening_transform_0.tif  opening_transform_120.tif  opening_transform_170.tif  opening_transform_180.tif  opening_transform_debug_1_horiz.tif  opening_transform_debug_directions_horiz.tif  opening_transform_debug_rectangle_horiz.tif  opening_transform_debug_synthetic_1_horiz.tif  opening_transform_debug_synthetic_1_vertical.tif  opening_transform_debug_synthetic_2_diagonal_right.tif  opening_transform_debug_synthetic_2_frac_r.tif  opening_transform_debug_synthetic_2_horiz.tif  opening_transform_debug_synthetic_2_vertical.tif  opening_transform_fig13_binary_frac_r.tif  opening_transform_fig15_binary_4_directions.tif  opening_transform_fig15_binary_frac_lr.tif  opening_transform_fig15_binary_frac_r_horiz.tif  (+16 more)
(+24 files in other folders)
